--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -102,7 +102,7 @@
 
     <!-- Hero Section Start -->
     <section class="hero bg-base is-fullheight">
-      <div class="hero-body">
+      <div class="hero-body" style="background-image: url(./static/img/back.png);">
         <div class="">
           <div class="columns">
             <div class="column mr-6 mt-12" data-aos="fade-up">
