--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -120,7 +120,7 @@ nav.nav-w {
 
 .nav-w {
   background: transparent !important;
-  box-shadow: 100px 2px 10px white !important;
+  box-shadow: 100px 2px 10px black !important;
 }
 
 .mb-12 {
