--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -28,15 +28,15 @@
             <div class="collapse navbar-collapse" id="mainmenu">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a href="#Features" class="nav-link">Features</a></li>
-                    <li class="nav-item"><a href="#Statistics" class="nav-link">Statics</a></li>
+                    <li class="nav-item"><a href="#Statistics" class="nav-link">Statistics</a></li>
                     <li class="nav-item"><a href="#FAQ" class="nav-link">FAQ</a></li>
-                    <li class="nav-item"><a href="./pages/commands.html" class="nav-link">Commands</a></li>
+                    <li class="nav-item"><a href="{{urlForCommands}}" class="nav-link">Commands</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="linksdrop" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">Links</a>
                         <ul class="dropdown-menu bg-dark" aria-labelledby="linksdrop">
-                            <li><a class="dropdown-item text-muted" href="">Invite</a></li>
-                            <li><a class="dropdown-item text-muted" href="">Support Server</a></li>
+                            <li><a class="dropdown-item text-muted" href="{{inviteUrl}}">Invite</a></li>
+                            <li><a class="dropdown-item text-muted" href="{{supportServer}}">Support Server</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -57,8 +57,8 @@
                     <p>{{botName}} is the only bot you'll ever need. It comes with all the features you'd ever need, and you
                          can customize every message and reply to your liking!
                     </p>
-                    <a class="btn btn-info" href="">Invite {{botName}}</a>
-                    <a class="m-2 btn btn-light" href="">Support Server</a>
+                    <a class="btn btn-info" href="{{inviteUrl}}">Invite {{botName}}</a>
+                    <a class="m-2 btn btn-light" href="{{supportServer}}">Support Server</a>
                 </div>
                 <img class="img-fluid w-50" src="./static/img/ArisBot.svg" alt="">
             </div>
@@ -116,7 +116,7 @@
     <!-- Statics -->
 
 
-    <section id="Statics" class="py-5 bg-dark text-light">
+    <section id="Statistics" class="py-5 bg-dark text-light">
         <div class="container">
             <div class="py-2 text-center">
                 <h2>Statistics:</h2>
@@ -199,34 +199,29 @@
                     <h3>Quick access</h3>
                     <ul>
                         <li><a href="#Features">Features</a></li>
-                        <li><a href="#Statics">Statics</a></li>
-                        <li><a href="#FAQ">Ask me</a></li>
+                        <li><a href="#Statistics">Statistics</a></li>
+                        <li><a href="#FAQ">FAQ</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 item">
                     <h3>About</h3>
                     <ul>
-                        <li><a href="./static/pages/commands.html">Commands</a></li>
-                        <li><a href="#">Team</a></li>
-                        <li><a href="#">License</a></li>
+                        <li><a href="{{urlForCommands}}">Commands</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 item">
                     <h3>Links</h3>
                     <ul>
-                        <li><a href="#">Support server</a></li>
-                        <li><a href="#">Invite bot</a></li>
-                        <li><a href="#">Github</a></li>
+                        <li><a href="{{supportServer}}">Support server</a></li>
+                        <li><a href="{{inviteUrl}}">Invite bot</a></li>
                     </ul>
-                </div>
-                <div class="col-lg-3 item social"><a href="#"><ion-icon name="logo-discord"></ion-icon></a><a href="#"><ion-icon name="logo-facebook"></ion-icon></a><a href="#"><ion-icon name="logo-twitter"></ion-icon></a><a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
-                    <p class="copyright">{{botName}} © 2022</p>
                 </div>
             </div>
         </div>
         <div class="page-footer font-small text-light mt-5">
         <div class="footer-copyright text-center">Made with 💖 by
             <a href="https://github.com/Hadi-koubeissi/">Hadi Koubeissi</a>
+            Edited by <a href="https://deadsafari.me/">DeadSafari</a>
             © 2022 Copyright
           </div>
         </div>
