--- a/website/templates/pages/commands.html
+++ b/website/templates/pages/commands.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
-    <link href="../css/style.css" rel="stylesheet">
-    <link href="../css/commands.css" rel="stylesheet">
+    <link href="./static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./static/css/style.css" rel="stylesheet">
+    <link href="./static/css/commands.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <link rel="shortcut icon" href="../img/" type="image/x-icon">
-    <title>Aris Bot</title>
+    <link rel="shortcut icon" href="./static/img/" type="image/x-icon">
+    <title>{{botName}}</title>
 </head>
 
 <body>
@@ -21,25 +21,24 @@
 
     <div class="navbar navbar-expand-md bg-dark navbar-dark">
         <div class="container">
-            <a href="../index.html" class="navbar-brand text-info">Aris Bot</a>
+            <a href="{{homePage}}" class="navbar-brand text-info">{{botName}}</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainmenu"><span
                     class="navbar-toggler-icon"></span></button>
 
             <div class="collapse navbar-collapse" id="mainmenu">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a href="../index.html" class="nav-link">Home</a></li>
+                    <li class="nav-item"><a href="{{homePage}}" class="nav-link">Home</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="linksdrop" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">Links</a>
                         <ul class="dropdown-menu bg-dark" aria-labelledby="linksdrop">
-                            <li><a class="dropdown-item text-muted" href="">Invite</a></li>
-                            <li><a class="dropdown-item text-muted" href="">Github</a></li>
-                            <li><a class="dropdown-item text-muted" href="">Support Server</a></li>
+                            <li><a class="dropdown-item text-muted" href="{{inviteUrl}}">Invite</a></li>
+                            <li><a class="dropdown-item text-muted" href="{{supportServer}}">Support Server</a></li>
                         </ul>
                     </li>
                 </ul>
-                <li class="navbar-nav nav-item"><a href="" class="btn btn-outline-info">Login</a></li>
+                <li class="navbar-nav nav-item"><a href="{{inviteUrl}}" class="btn btn-outline-info">Inivte</a></li>
             </div>
         </div>
     </div>
@@ -48,8 +47,8 @@
         <section style="margin-top: 9%;">
             <div class="row">
                 <div class="col-sm-6 my-1">
-                    <h2 class="fw-bold">Aris Commands</h2>
-                    <p class="command-descreption">Find all Aris bot commands and information you need fast and easy</p>
+                    <h2 class="fw-bold">{{botName}} Commands</h2>
+                    <p class="command-descreption">Find all {{botName}} commands and information you need fast and easy</p>
                 </div>
                 <div class="col-sm-6 my-1">
                     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4050940490843957" crossorigin="anonymous"></script>
@@ -310,35 +309,30 @@
                         <div class="col-sm-4 col-md-3 item">
                             <h3>Quick access</h3>
                             <ul>
-                                <li><a href="#Features">Features</a></li>
-                                <li><a href="#Statics">Statics</a></li>
-                                <li><a href="#FAQ">Ask me</a></li>
+                                <li><a href="{{homePage}}/#Features">Features</a></li>
+                                <li><a href="{{homePage}}/#Statistics">Statistics</li>
+                                <li><a href="{{homePage}}/#FAQ">FAQ</a></li>
                             </ul>
                         </div>
                         <div class="col-sm-4 col-md-3 item">
                             <h3>About</h3>
                             <ul>
-                                <li><a href="./pages/commands.html">Commands</a></li>
-                                <li><a href="#">Team</a></li>
-                                <li><a href="#">License</a></li>
+                                <li><a href="{{commandsPage}}">Commands</a></li>
                             </ul>
                         </div>
                         <div class="col-sm-4 col-md-3 item">
                             <h3>Links</h3>
                             <ul>
-                                <li><a href="#">Support server</a></li>
-                                <li><a href="#">Invite bot</a></li>
-                                <li><a href="#">Github</a></li>
+                                <li><a href="{{supportServer}}">Support server</a></li>
+                                <li><a href="{{inviteUrl}}">Invite bot</a></li>
                             </ul>
-                        </div>
-                        <div class="col-lg-3 item social"><a href="#"><ion-icon name="logo-discord"></ion-icon></a><a href="#"><ion-icon name="logo-facebook"></ion-icon></a><a href="#"><ion-icon name="logo-twitter"></ion-icon></a><a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
-                            <p class="copyright">Aris Bot © 2022</p>
                         </div>
                     </div>
                 </div>
                 <div class="page-footer font-small text-light mt-5">
                 <div class="footer-copyright text-center">Made with 💖 by
                     <a href="https://github.com/Hadi-koubeissi/">Hadi Koubeissi</a>
+                    Edited by <a href="https://deadsafari.me/">DeadSafari</a>
                     © 2022 Copyright
                   </div>
                 </div>
@@ -347,8 +341,8 @@
     
     <input id="commands" value="[{&#34;title&#34;:&#34;&lt;i class=&#39;fas fa-gift ttt&#39;&gt;&lt;/i&gt;&amp;nbsp; Moderation Commands&#34;,&#34;commands&#34;:[&#34;ban&#34;,&#34;kick&#34;,&#34;mute&#34;]},{&#34;title&#34;:&#34;&lt;i class=&#39;fas fa-globe-europe ttt&#39;&gt;&lt;/i&gt;&amp;nbsp; General Commands&#34;,&#34;commands&#34;:[&#34;help&#34;,&#34;ping&#34;,&#34;invite&#34;]},{&#34;title&#34;:&#34;&lt;i class=&#39;fas fa-hammer-war ttt&#39;&gt;&lt;/i&gt;&amp;nbsp;&amp;nbsp; Leveling Commands&#34;,&#34;commands&#34;:[&#34;leaderboard&#34;]},{&#34;title&#34;:&#34;&lt;i class=&#39;fas fas fa-crown ttt&#39;&gt;&lt;/i&gt;&amp;nbsp; Premium Commands&#34;,&#34;commands&#34;:[&#34;reactionrole&#34;,&#34;slowmode&#34;]}]" hidden />
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="/fontawesome/all.min.js"></script>
-    <script src="/js/animation.js"></script>
+    <script src="./static/fontawesome/all.min.js"></script>
+    <script src="./static/js/animation.js"></script>
     <script>
         function active(elm){
             document.getElementById("CategoryBtnAll").classList.remove("active");
@@ -399,7 +393,7 @@
         }
     </script>
 
-    <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="./static/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </body>
 
