--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -40,7 +40,7 @@
                         </ul>
                     </li>
                 </ul>
-                <li class="navbar-nav nav-item"><a href="" class="btn btn-outline-info">Login</a></li>
+                <li class="navbar-nav nav-item"><a href="{{inviteUrl}}" class="btn btn-outline-info">Invite</a></li>
             </div>
         </div>
     </div>
