add delete.py make member not typehinted in formatstring.py use uuids instead of member ids add removeFromDb.py add more commands to commands.html

--- a/website/templates/pages/commands.html
+++ b/website/templates/pages/commands.html
@@ -194,6 +194,7 @@
                                     <span>Usage Examples:</span> <br />
                                     <span class="examples">
 
+                                        /help [command]<br>
                                         /help<br>
                                         /help ban
 
@@ -227,22 +228,22 @@
                         </div>
                     </div>
 
-                    <div class="accordion accordion-flush mt-2" id="unwarn">
+                    <div class="accordion accordion-flush mt-2" id="delete">
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="flush-headingOne">
                                 <button class="accordion-button collapsed" data-bs-toggle="collapse"
-                                    data-bs-target="#funwarn">
-                                    /unwarn&nbsp; <span class="command-descreption">- Unwarns the given member.</span>
+                                    data-bs-target="#fdelete">
+                                    /delete&nbsp; <span class="command-descreption">- deletes the given member.</span>
                                 </button>
                             </h2>
-                            <div id="funwarn" class="accordion-collapse collapse" data-bs-parent="#unwarn">
+                            <div id="fdelete" class="accordion-collapse collapse" data-bs-parent="#delete">
                                 <div class="accordion-body">
                                     <span>Usage Examples:</span> <br />
                                     <span class="examples">
 
-                                        /unwarn &lt;member&gt; [reason]<br>
-                                        /unwarn @DeadSafari Pardoned<br>
-                                        /unwarn @DeadSafari<br>
+                                        /delete &lt;id&gt;<br>
+                                        /delete <br>
+                                        /delete @DeadSafari<br>
 
                                     </span>
                                 </div>
