stuff add logo to index.html delete ariest svg file fix logging in mute.py make uuid str in logtob save file before return in removeFromDb.py

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -60,7 +60,7 @@
                     <a class="btn btn-info" href="{{inviteUrl}}">Invite {{botName}}</a>
                     <a class="m-2 btn btn-light" href="{{supportServer}}">Support Server</a>
                 </div>
-                <img class="img-fluid w-50" src="./static/img/ArisBot.svg" alt="">
+                <img src="./static/img/static.png" alt="" height="320" width="320" style="border-radius: 50%;">
             </div>
         </div>
     </section>
