--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -137,8 +137,8 @@
                 </div>
                 <div class="col-sm p-5 h1">
                     <i class="bi bi bi-hash text-primary"></i>
-                    <h5>{{commandCount}}</h5>
-                    <h5>Commands Ran</h5>
+                    <h5>{{upTime}}</h5>
+                    <h5>UpTime</h5>
                 </div>
             </div>
 
